<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinnerLostFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/lost_found_array"
            android:prompt="@string/select_lost_found" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_location"
            android:focusable="false" />

        <Button
            android:id="@+id/btnGetCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_current_location" />

        <Button
            android:id="@+id/btnSaveAdvert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_advert" />

    </LinearLayout>

</ScrollView>
